<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Help">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/help_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp">

                <ImageView
                    android:id="@+id/help_back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@drawable/back_icon"
                    android:contentDescription="@string/back_button_image_description"
                    tools:ignore="ImageContrastCheck"/>

                <TextView
                    android:id="@+id/help_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/andada"
                    android:padding="10dp"
                    android:text="@string/help_title"
                    android:textColor="@color/dark_blue"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/cabin"
                android:text="@string/team_name"
                android:textColor="@color/dark_purple"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/author_ref"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/cabin"
                android:text="@string/author_ref"
                android:textColorLink="#2196F3"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:text="@string/image_references_text"
                android:layout_marginVertical="5dp"
                android:textColorLink="#2196F3"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ref1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:text="@string/main_config_background_ref"
                android:textColorLink="#2196F3"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/ref2"
                android:text="@string/main_history_background_ref"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:textColorLink="#2196F3"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/ref3"
                android:text="@string/main_coin_flip_background_ref"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:textColorLink="#2196F3"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/ref4"
                android:text="@string/main_tasks_background_ref"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:textColorLink="#2196F3"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/ref5"
                android:text="@string/main_timer_background_ref"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:textColorLink="#2196F3"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/ref6"
                android:text="@string/main_help_background_ref"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:textColorLink="#2196F3"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/ref7"
                android:text="@string/app_launch_pic_ref"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:textColorLink="#2196F3"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/ref8"
                android:text="@string/default_child_pic_ref"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:textColorLink="#2196F3"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/ref9"
                android:text="@string/coin_ref"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:textColorLink="#2196F3"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:text="@string/media_references_text"
                android:textColorLink="#2196F3"
                android:layout_marginVertical="5dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ref10"
                android:text="@string/coin_flip_sound_ref"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:textColorLink="#2196F3"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/ref11"
                android:text="@string/timer_background_ref"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:textColorLink="#2196F3"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:layout_marginVertical="5dp"
                android:text="@string/code_references_text"
                android:textColorLink="#2196F3"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/code_ref1"
                android:text="@string/code_ref1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:textColorLink="#2196F3"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/code_ref2"
                android:text="@string/code_ref2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:textColorLink="#2196F3"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/code_ref3"
                android:text="@string/code_ref3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:textColorLink="#2196F3"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/code_ref4"
                android:text="@string/code_ref4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:textColorLink="#2196F3"
                android:textSize="18sp"/>

        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>