<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Edit_Child_Activity">

    <RelativeLayout
        android:id="@+id/edit_name_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/edit_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/back_icon"
            android:contentDescription="@string/back_button_image_description"
            tools:ignore="ImageContrastCheck"  />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toStartOf="@id/delete_button"
            android:layout_toEndOf="@id/edit_back_button"
            android:fontFamily="@font/andada"
            android:padding="10dp"
            android:text="@string/edit_name_title"
            android:textColor="@color/dark_blue"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/delete_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/trash_icon"
            android:contentDescription="@string/edit_delete_description" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_name_toolbar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="5dp"
            android:text="@string/touch_to_edit_profile_photo"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/edit_profile_card_view"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:elevation="12dp"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="80dp"
                android:layout_centerHorizontal="true">
                <ImageView
                    android:id="@+id/edit_profile_picture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/default_profile"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/edit_profile_description" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/touch_edit_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/edit_profile_card_view"
                android:layout_alignTop="@id/edit_profile_card_view"
                android:layout_alignEnd="@id/edit_profile_card_view"
                android:layout_alignBottom="@id/edit_profile_card_view"
                app:layout_constraintVertical_bias="1.0" />
        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:fontFamily="@font/cabin"
            android:paddingHorizontal="20dp"
            android:textColor="@color/dark_blue"
            android:textAllCaps="true"
            android:text="@string/profile_photo"
            android:textSize="14sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:text="@string/nickname"
                android:textColor="@color/light_grey"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:background="@drawable/text_input_background"
                android:hint="@string/edit_child_edit_name"
                android:textSize="20sp"/>

        </RelativeLayout>


    </LinearLayout>


    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/button_background"
        android:text="@string/save"
        android:theme="@style/ButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>