<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Coin_Flip_Config">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/coin_config_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/coin_config_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/back_icon"
                android:contentDescription="@string/back_button_image_description"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/andada"
                android:padding="10dp"
                android:text="@string/coin_config_title"
                android:textColor="@color/dark_blue"
                android:textSize="30sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/coin_config_card_view"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:elevation="12dp"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="80dp">
                <ImageView
                    android:id="@+id/picker_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/default_profile"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/profile_description" />
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/picker_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:fontFamily="@font/cabin"
                android:text="@string/coin_config_default_name"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>



        <RadioGroup
            android:id="@+id/config_guess_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <RadioButton
                android:id="@+id/radio_heads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/cabin"
                android:textSize="20sp"
                android:text="@string/heads_text" />

            <RadioButton
                android:id="@+id/radio_tails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/cabin"
                android:textSize="20sp"
                android:text="@string/tails_text" />
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/picker_button"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/button_background"
        android:text="@string/change_picker_button_text"
        android:theme="@style/ButtonStyle"
        app:layout_constraintBottom_toTopOf="@+id/flip_coin_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/flip_coin_button"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/button_background"
        android:text="@string/flip_coin_button_text"
        android:theme="@style/ButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>